--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<h2 class="mb-5">Reference</h2>
 
 					<div class="resume-item mb-4">
-						<h3>OKAR RIVALDO - BLEAP</h3>
+						<h3>DOKAR RIVALDO - BLEAP</h3>
 						<p>(CREATIVE HEAD)</p>
 						<a href="https://www.linkedin.com/in/dokar-rivaldo-48bb82217/"><span class="school">Linkedin</span></a>
 					</div>
@@ -170,7 +170,7 @@
 	<section class="site-section about_section" id="section-about">
 		<div class="container">
 			<div class="section-heading text-center">
-				<h2 class="text-dark">About <strong>Me</strong></h2>
+				<h2 class="text-dark"><strong>About Me</strong></h2>
 			</div>
 			<div class="row mb-5 align-items-center about_me">
 				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
