--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
 	<section class="site-section about_section" id="section-about">
 		<div class="container">
 			<div class="section-heading text-center">
-				<h2 class="text-dark"><strong>About Me</strong></h2>
+				<h2 class="text-dark about_title">About Me</h2>
 			</div>
 			<div class="row mb-5 align-items-center about_me">
 				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
 					
 					<div class="section-heading about_name">
-						<h2 class="text-dark">Binil Krishna</h2>
+						<h2 class="text-dark">BINIL KRISHNA</h2>
 					</div>
-					<h3 class=" text-white"><strong>CONTENT CREATOR & DESIGNER</strong></h3>
+					<h3 class=" text-white designation"><strong>CONTENT CREATOR & DESIGNER</strong></h3>
 					<p class="mb-5 text-dark about_desc"><strong>Video editor and content creator with an experience of 2 years. I've worked with 25+ 
 						brands, models, influencers, and restaurants. I have a strong core in Video editing, 
 						graphic design, videography, motion graphics, colorgrading, and a keen eye for detail.</strong></p>
